# nos-notification-service

./: Cargo.toml  Makefile
.github/workflows/: ci.yml
_tools/: check_repository_unchanged.sh
src/: fixtures.rs  main.rs  migrations.rs  service.rs
src/service/: app.rs  domain.rs
src/service/adapters/: sqlite.rs
src/service/app/: commands.rs  common.rs
src/service/app/commands/: downloader.rs  implementation.rs
src/service/domain/: events.rs
src/service/ports/: http.rs
