[package]
name = "nos_notification_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"]}
nostr = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.1"
sqlite = "0.30.4"
tempfile = "3.5.0"
